# TinyGiftRendererAndroid

./: .gitignore  Gemfile  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: main.yml
GiftRendererDemo/: build.gradle  settings.gradle
GiftRendererDemo/app/: build.gradle
GiftRendererDemo/gradle/wrapper/: gradle-wrapper.properties
GiftRendererSDK/: .gitignore  build.gradle  buildJCenter.gradle  publish-mavencentral.gradle  settings.gradle
GiftRendererSDK/GiftRenderer/: .project  CMakeLists.txt  build.gradle
GiftRendererSDK/MVYGiftRendererSDK/: .project  build.gradle
GiftRendererSDK/gradle/wrapper/: gradle-wrapper.properties
GiftRendererSDK/libyuv/: build.gradle
TinyGiftRenderer/: CMakeLists.txt  TinyGiftRenderer_Usage.md  build.gradle
TinyGiftRenderer/.meghanada/LightGiftRenderer_eeacd44f/: xd.lck
TinyGiftRenderer/src/main/: AndroidManifest.xml
TinyGiftRenderer/src/main/cpp/: TinyGiftRendererJni.cpp  render_api.h
TinyGiftRenderer/src/main/java/com/myvideoyun/TinyGiftRenderer/: TinyGiftRenderer.java
TinyGiftRenderer/src/main/java/com/myvideoyun/TinyGiftRenderer/glesWrapper/: GLUtil.java  OffScreenFrameBuffer.java
TinyGiftRenderer/src/main/java/com/myvideoyun/TinyGiftRenderer/render/: IEventListener.java  LightGiftFilter.java  WeakEventListener.java
TinyGiftRenderer/src/main/res/values/: strings.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
demo/: .gitignore  build.gradle  settings.gradle
demo/app/: build.gradle
docs/: CNAME
gradle/wrapper/: gradle-wrapper.properties
(+173 files in other folders)
